# LinkedIn-Job-Scrapper

./: app.py  pyproject.toml
linkedin-scraper/: Dockerfile  README.md
linkedin-scraper/linkedin_scraper/: __main__.py  main.py  routes.py
